Fixes, font-spacing

--- a/src/assets/scss/posts.scss
+++ b/src/assets/scss/posts.scss
@@ -88,7 +88,12 @@ a {
   h5,
   h6 {
     font-weight: bold;
+    line-height: 1.25;
     margin-top: 1.5rem;
+  }
+
+  p {
+    line-height: 1.5;
   }
 
   .code {
